--- a/app/src/main/res/drawable/btn_signin_facebook_pt.xml
+++ b/app/src/main/res/drawable/btn_signin_facebook_pt.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/colorPrimary">
 
-    <item android:drawable="@drawable/btn_facebook_en"></item>
+    <item android:drawable="@drawable/btn_facebook"></item>
 
 </ripple>
