--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -64,7 +64,7 @@
 
         <!-- Microphone Checkbox -->
         <CheckBox
-            android:id="@+id/singer_checkbox"
+            android:id="@+id/profileVocalCheckbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
@@ -72,7 +72,7 @@
 
         <!-- Guitar Checkbox -->
         <CheckBox
-            android:id="@+id/guitar_checkbox"
+            android:id="@+id/profileGuitarCheckbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -81,7 +81,7 @@
 
         <!-- Bass Checkbox -->
         <CheckBox
-            android:id="@+id/bass_checkbox"
+            android:id="@+id/profileBassCheckbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -90,7 +90,7 @@
 
         <!-- Drum Checkbox -->
         <CheckBox
-            android:id="@+id/drum_checkbox"
+            android:id="@+id/profileDrumCheckbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -99,7 +99,7 @@
 
         <!-- Others Checkbox -->
         <CheckBox
-            android:id="@+id/other_checkbox"
+            android:id="@+id/profileOtherCheckbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
