--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,7 +8,7 @@
 
     <!-- View Title -->
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/profileTitleTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -28,37 +28,39 @@
     <!-- HEADER -->
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/musicianConstraintHeader"
+        android:id="@+id/profileConstraintHeader"
         android:layout_width="wrap_content"
         android:layout_height="160dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/profileTitleTxt">
 
 
         <!-- BACKGROUND PROFILE PIC -->
 
         <ImageView
-            android:id="@+id/musicianHeaderBackground"
+            android:id="@+id/profileHeaderBackgroundImg"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:contentDescription="@string/profileHeaderBackground"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/profile_pic_2" />
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/profile_pic" />
 
         <!-- BLUE BACKGROUND LAYER -->
 
         <ImageView
-            android:id="@+id/profileHeaderTransparency"
+            android:id="@+id/profileHeaderTransparencyImg"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:contentDescription="@string/profileHeaderTransparency"
-            app:layout_constraintBottom_toBottomOf="@+id/musicianHeaderBackground"
+            app:layout_constraintBottom_toBottomOf="@+id/profileHeaderBackgroundImg"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -67,15 +69,15 @@
         <!-- PROFILE PIC -->
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/profile_image"
+            android:id="@+id/profilePhotoImg"
             android:layout_width="130dp"
             android:layout_height="160dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:contentDescription="@string/profileHeaderPicture"
             android:elevation="4dp"
-            android:src="@drawable/profile_pic_2"
+            android:src="@drawable/profile_pic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -86,16 +88,20 @@
             android:id="@+id/profileNameTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginBottom="16dp"
             android:contentDescription="@string/profileHeaderNameTxt"
-            android:text="Shinoda"
+            android:fontFamily="sans-serif-light"
+            android:shadowColor="#2d2d2d"
+            android:shadowDx="0"
+            android:shadowDy="2"
+            android:shadowRadius="5"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="34sp"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Shinoda" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="matheus" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -111,7 +117,7 @@
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/musicianConstraintHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/profileConstraintHeader" />
 
     <!-- Abilities Options -->
     <android.support.constraint.ConstraintLayout
