User profile data recovery

--- a/app/src/main/res/drawable/btn_ripple_logout_pt.xml
+++ b/app/src/main/res/drawable/btn_ripple_logout_pt.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/colorPrimary">
 
-    <item android:drawable="@drawable/btn_finish_pt"></item>
+    <item android:drawable="@drawable/btn_logout_pt"></item>
 
 </ripple>
