--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#1F1F1F</color>
-    <color name="colorAccent">#d72f80ed</color>
+    <color name="colorAccent">#2f80ed</color>
+    <color name="colorAccentTransparency">#c82f80ed</color>
     <color name="backgroundColor">#151515</color>
     <color name="textColor">#E6E6E6</color>
     <color name="DisabledColor">#828282</color>
