--- a/app/src/main/res/layout/cardview_item_musician.xml
+++ b/app/src/main/res/layout/cardview_item_musician.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="170dp"
     android:layout_height="210dp"
-    android:layout_margin="24dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginStart="20dp"
     android:elevation="4dp">
 
     <LinearLayout
